// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardList CardListの初期値(linkあり): dummyCardsLink 1`] = `
"<div>
  <div class=\\"card-list\\">
    <div class=\\"card-list__card\\">
      <article class=\\"card-list-item\\">
        <figure><img alt=\\"ダミータイトルの画像\\" class=\\"card-img card-img--lg\\">
          <div class=\\"card-list-item__border\\"></div>
          <figcaption>
            <h2 class=\\"card-title\\">ダミータイトル</h2>
            <p class=\\"base-text base-text--card\\">詳細</p>
          </figcaption>
        </figure> <button class=\\"btn\\">
          WebSite
        </button>
      </article>
    </div>
    <div class=\\"card-list__card\\">
      <article class=\\"card-list-item\\">
        <figure><img alt=\\"ダミータイトルの画像\\" class=\\"card-img card-img--lg\\">
          <div class=\\"card-list-item__border\\"></div>
          <figcaption>
            <h2 class=\\"card-title\\">ダミータイトル</h2>
            <p class=\\"base-text base-text--card\\">詳細</p>
          </figcaption>
        </figure> <button class=\\"btn\\">
          GitHub
        </button>
      </article>
    </div>
  </div>
</div>"
`;

exports[`CardList CardListの初期値(linkなし): dummyCards 1`] = `
"<div>
  <div class=\\"card-list\\">
    <div class=\\"card-list__card\\">
      <article class=\\"card-list-item\\">
        <figure><img alt=\\"ダミータイトルの画像\\" class=\\"card-img card-img--sm\\">
          <div class=\\"card-list-item__border\\"></div>
          <figcaption>
            <h2 class=\\"card-title\\">ダミータイトル</h2>
            <p class=\\"base-text base-text--card\\">詳細</p>
          </figcaption>
        </figure>
        <!---->
      </article>
    </div>
    <div class=\\"card-list__card\\">
      <article class=\\"card-list-item\\">
        <figure><img alt=\\"ダミータイトルの画像\\" class=\\"card-img card-img--sm\\">
          <div class=\\"card-list-item__border\\"></div>
          <figcaption>
            <h2 class=\\"card-title\\">ダミータイトル</h2>
            <p class=\\"base-text base-text--card\\">詳細</p>
          </figcaption>
        </figure>
        <!---->
      </article>
    </div>
  </div>
</div>"
`;

exports[`PortfolioNavigation 閉じた時のスナップショット 1`] = `
"<div>
  <nav>
    <div>
      <div class=\\"nav-bar\\">
        <div class=\\"nav-bar__box\\"><a href=\\"/\\" class=\\"nav-logo\\">ダミー</a>
          <div>
            <div class=\\"nav-icon\\"><span class=\\"nav-icon__top nav-icon__top--close\\"></span> <span class=\\"nav-icon__middle\\"></span> <span class=\\"nav-icon__bottom nav-icon__bottom--close\\"></span></div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <transition-stub name=\\"nav-fade\\">
        <div class=\\"nav-list\\" style=\\"display: none;\\">
          <ul>
            <div>
              <li class=\\"nav-list-item\\"><a class=\\"nav-list-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"Topの画像\\" class=\\"nav-img\\">
                  <p class=\\"base-text base-text--nav\\">Top</p>
                </a></li>
            </div>
          </ul>
        </div>
      </transition-stub>
    </div>
  </nav>
</div>"
`;

exports[`PortfolioNavigation 開いた時のスナップショット 1`] = `
"<div>
  <nav>
    <div>
      <div class=\\"nav-bar\\">
        <div class=\\"nav-bar__box\\"><a href=\\"/\\" class=\\"nav-logo\\">ダミー</a>
          <div>
            <div class=\\"nav-icon\\"><span class=\\"nav-icon__top nav-icon__top--open\\"></span> <span class=\\"nav-icon__middle nav-icon__middle--fade\\"></span> <span class=\\"nav-icon__bottom nav-icon__bottom--open\\"></span></div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <transition-stub name=\\"nav-fade\\">
        <div class=\\"nav-list\\" style=\\"\\">
          <ul>
            <div>
              <li class=\\"nav-list-item\\"><a class=\\"nav-list-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"Topの画像\\" class=\\"nav-img\\">
                  <p class=\\"base-text base-text--nav\\">Top</p>
                </a></li>
            </div>
          </ul>
        </div>
      </transition-stub>
    </div>
  </nav>
</div>"
`;
